--- a/examples/Helloworld/HelloMaterial.html
+++ b/examples/Helloworld/HelloMaterial.html
@@ -4,7 +4,85 @@
     <meta charset="UTF-8">
     <title>HelloMaterial</title>
 </head>
+<script src="../../build/try3d.min.js"></script>
+<script src="../helpers.js"></script>
 <body>
+<div style="width: 100%;height: 100%;position:fixed;margin: 0px;padding: 0px;left: 0px;top: 0px;margin: 0px;">
+    <canvas id="canvas" style="padding: 0px;margin: 0px;position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
+</div>
+<script type="module">
 
+    // 创建场景对象(渲染器至少包含一个scene,否则,将什么事情都不做)
+    let scene = new Try3d.Scene({cavnas:document.getElementById('canvas')});
+    scene.getRender().setGammaFactor(1.0);
+    scene.getCanvas().setClearColor(1.0, 1.0, 1.0, 1.0);
+    // 内置ColorDef
+    let colorDef = Try3d.MaterialDef.parse(Try3d.Internal.S_COLOR_DEF_DATA);
+
+    // 定义一个根节点
+    let rootNode = new Try3d.Node(scene, {id:'rootNode'});
+    scene.addSceneNode(rootNode);
+
+    // 地板
+    let floor = new Try3d.GroupPlane(scene, {id:'floor', xSize:10, zSize:10, xSegments:10, zSegments:10, xRepeat:true, zRepeat:true});
+    let floorMat = new Try3d.Material(scene, {id:'floorMat', materialDef:colorDef});
+    let floorTexture = new Try3d.Texture2DVars(scene);
+    floorTexture.setImageSrc(scene, '../Assets/Textures/stones.jpg');
+    floorMat.setParam('colorMap', floorTexture);
+    floor.setMaterial(floorMat);
+    floor.setLocalTranslationXYZ(0, 0.1, 0);
+    rootNode.addChildren(floor);
+
+    // wall
+    let wall = new Try3d.Box(scene, {id:'wall', xHalf:0.1, yHalf:2, zHalf:5});
+    let wallMat = new Try3d.Material(scene, {id:'wallMat', materialDef:colorDef});
+    let wallTexture = new Try3d.Texture2DVars(scene);
+    wallTexture.setImageSrc(scene, '../Assets/Textures/wall.jpg');
+    wallMat.setParam('colorMap', wallTexture);
+    wall.setMaterial(wallMat);
+    wall.setLocalTranslationXYZ(-2, 2, 0);
+    rootNode.addChildren(wall);
+
+    // ball
+    let ball = new Try3d.Sphere(scene, {id:'ball', radius:1});
+    let ballMat = new Try3d.Material(scene, {id:'ballMat', materialDef:colorDef});
+    let ballTexture = new Try3d.Texture2DVars(scene);
+    ballTexture.setImageSrc(scene, '../Assets/Textures/water.jpg');
+    ballMat.setParam('colorMap', ballTexture);
+    ball.setMaterial(ballMat);
+    ball.setLocalTranslationXYZ(1, 1, 1);
+    rootNode.addChildren(ball);
+
+    // 一堆箱子
+    let boxMat = new Try3d.Material(scene, {id:'boxMat', materialDef:colorDef});
+    let boxTexture = new Try3d.Texture2DVars(scene);
+    boxTexture.setImageSrc(scene, '../Assets/Textures/container2.png');
+    boxMat.setParam('colorMap', boxTexture);
+    for(let i = 0, x = 0, y = 0, z = 0;i < 10;i++){
+        x = Math.random() * 1.5 + 2;
+        y = i * 0.7;
+        z = Math.random() * 1.5 + 2;
+        let box = new Try3d.Box(scene, {id:'box_' + i, xHalf:0.5, yHalf:0.5, zHalf:0.5});
+        box.setLocalTranslationXYZ(x, y, z);
+        box.setMaterial(boxMat);
+        rootNode.addChildren(box);
+    }
+
+    // 创建一个控制器
+    let sceneControl = new Try3d.SceneBrowsingController(scene, {id:'control'});
+    sceneControl.lookScene(rootNode);
+    sceneControl.setTargetDistance(10);
+    initOther(scene, rootNode);
+
+
+    // 创建渲染器
+    let renderEngine = new Try3d.RenderEngine();
+    // 添加要渲染的场景对象
+    renderEngine.addScene(scene);
+    // 启动渲染器
+    renderEngine.launch();
+    showStats(scene);
+</script>
 </body>
 </html>
+
