--- a/examples/Template.html
+++ b/examples/Template.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <title>HelloScene</title>
 </head>
-<script src="../../build/try3d.min.js"></script>
+<!--<script src="../../build/try3d.min.js"></script>-->
+<script type="module">
+    import Try3d from '../../src/Try3d.js';
+    window.Try3d = Try3d;
+</script>
 <script src="../helpers.js"></script>
 <body>
     <div style="width: 100%;height: 100%;position:fixed;margin: 0px;padding: 0px;left: 0px;top: 0px;margin: 0px;">
         <canvas id="canvas" style="padding: 0px;margin: 0px;position:absolute;left: 0px;top: 0px;background-color: aliceblue" tabindex="0"></canvas>
     </div>
     <script type="module">
+        // if(!window.Try3d){
+        //     import Try3d from '../../src/Try3d.js';
+        //     window.Try3d = Try3d;
+        // }
 
         // 创建场景对象(渲染器至少包含一个scene,否则,将什么事情都不做)
         let scene = new Try3d.Scene({cavnas:document.getElementById('canvas')});
